fix: fix scrollbar thumb color default is transparent
- close https://github.com/ng-alain/ng-alain/issues/2476

--- a/packages/theme/system/theme-default.less
+++ b/packages/theme/system/theme-default.less
@@ -146,7 +146,7 @@
 @scrollbar-width:           6px;
 @scrollbar-height:          6px;
 @scrollbar-track-color:     rgba(0, 0, 0, 0.3);
-@scrollbar-thumb-color:     #6e6e6e;
+@scrollbar-thumb-color:     transparent;
 @scrollbar-table-enabled:   false;
 
 // type
