--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -7,3 +7,5 @@
 @site-header-box-shadow: 0 2px 8px rgba(240, 241, 242, 65);
 @site-markdown-code-bg: #f2f4f5;
 @site-mobile: 1200px;
+
+@scrollbar-enabled: false;
